--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.jpeg" />
+    <link rel="stylesheet" href="./src/index.css/src" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI QUIZ</title>
   </head>
-  <body class="bg-[#243B55] ">
+  <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
